# qstm

./: CMakeLists.txt  README.md  qstm-test.pro  qstm.pri  qstm.pro  vcpkg.json
example/: example.pro  main.cpp  simpleobject.cpp  simpleobject.h  util.cpp  util.h
includes/: QStm
src/: CMakeLists.txt  qstm.h  qstm.pri  qstm_cache_pool.cpp  qstm_cache_pool.h  qstm_const.h  qstm_currency.cpp  qstm_currency.h  qstm_fileinfo.cpp  qstm_fileinfo.h  qstm_global.h  qstm_macro.h  qstm_message.cpp  qstm_message.h  qstm_meta_types.cpp  qstm_meta_types.h  qstm_network_types.h  qstm_object.cpp  qstm_object.h  qstm_object_macro.h  qstm_object_wrapper.cpp  qstm_object_wrapper.h  qstm_result.cpp  qstm_result.h  qstm_result_info.cpp  qstm_result_info.h  qstm_setting_base.cpp  qstm_setting_base.h  qstm_setting_manager.cpp  qstm_setting_manager.h  qstm_svm.cpp  qstm_svm.h  qstm_types.cpp  qstm_types.h  qstm_types_const.h  qstm_url.cpp  qstm_url.h  qstm_util_date.cpp  qstm_util_date.h  qstm_util_double.cpp  (+13 more)
src/private/: p_qstm_base_setting.cpp  p_qstm_base_setting.h  p_qstm_service_manager.h  p_qstm_setting_manager.cpp  p_qstm_setting_manager.h
test/: qstm-test.pri  qstm_functional_test_manager.cpp  qstm_test.cpp  qstm_test.h  qstm_test_functional.h  qstm_test_unit.h  qstm_unit_test_date_util.cpp  qstm_unit_test_double_util.cpp  qstm_unit_test_formatting_util.cpp  qstm_unit_test_manager.cpp  qstm_unit_test_object.cpp  qstm_unit_test_result_value.cpp  qstm_unit_test_setting.cpp  qstm_unit_test_variant_util.cpp
